CR-2008-06-19-0: Enhancem.: Hedeby: added merged logfile feature
                            - enhanced get_all_log_files() to create one
                              merged log file
                            - enhanced exec_start_runlevel_hooks by parameters
                              about current test status
                            - hedeby start runlevel hook now will create
                              merged log file when test fails and stores it
                              into hedeby dist subdirectory "TS_LOG_FILES"
                 Review:    RH

JG-2008-06-16-0: Enhancem.: Added test for IZ 2615 in check 
                            system_tests/qmaster/reporting.
                 Review:    HP

AP-2008-06-16-2: Bugfix:    Fixed AP-2008-06-16-1 commit.

CR-2008-06-16-1: Hotfix:    Fixed hedeby config_generic calls
                 Review:    AP

AP-2008-06-16-1: Enhancem.: o tst configuration procedures should use config_generic
                            o config_generic should add ports into user configuration
                              ports can be choosed from the configured user's portlist
                            o new way of display of configured hosts, also the usage
                              can be displayed
                            o config_generic should take an additional parameter,
                              how many instances can be specified
                 Issues:    133, 147, 157
                 Review:    CR

AP-2008-06-16-0: CVS        Created TS_PRIOR_CONFIG_TAG
--------------------------------------------------------

CR-2008-06-16-0: Bugfix:    - added checktree hook for test runlevel check
                              (checks that system setup is correct before
                               starting level test run) 
                            - fixed possible TCL error in hedeby_mod_cleanup
                              (init exit_value)